# AcousticSpace

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: config.yaml  inference.yaml  model.yaml  train.yaml
docs/: api.md  architecture.md  dataset.md  deployment.md  experiments.md
notebooks/: 01_dataset_analysis.ipynb  01_eda.py  02_audio_preprocessing.ipynb  03_feature_engineering.ipynb  04_baseline_model.ipynb  05_ast_finetuning.ipynb  06_model_evaluation.ipynb
src/: __init__.py  build_manifest.py  data_loader.py
src/api/: main.py  routes.py  schemas.py
src/core/: config.py  exceptions.py  logger.py
src/data/: dataloader.py  dataset.py  splitter.py  validator.py
src/features/: breathing.py  feature_fusion.py  mfcc.py  rir.py  spectrogram.py
src/metrics/: __init__.py  accuracy.py  confusion_matrix.py  eer.py  roc.py
src/models/: ast.py  cnn.py  evaluator.py  predictor.py  trainer.py
src/preprocessing/: audio_loader.py  resample.py  silence_removal.py
src/utils/: helper.py  io.py  seed.py
src/visualization/: plots.py  spectrogram.py  waveform.py
tests/: test_api.py  test_dataset.py  test_features.py  test_model.py  test_preprocessing.py
training/: evaluate.py  export_model.py  inference.py  train.py
